--- a/ModellingProgram/Jupyter Notebooks/Hydrogeology/Solute Transport.ipynb
+++ b/ModellingProgram/Jupyter Notebooks/Hydrogeology/Solute Transport.ipynb
@@ -335,6 +335,23 @@
     "### Model Analysis\n",
     "<p>I think that this model works pretty well. Over time, it definitely models a flattening of the bump. The plot above models the flattening. The stronger the line, the later it was calculated. So, this gives the strongest curve with the lowest peak as the having had the most time to disperse, which is what I would expect. Given more time, the solute should spread out and have a lower concentration at each point just by random motion.</p>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dispersivity\n",
+    "<p>I'm not really all that sure how dispersivity is going to be different from diffusion, other than it has directionality and is related to velocity. From what I can tell, the equation for the dispersivity is:</p>\n",
+    "<h3><center>$ D_{disp} = \\alpha v $</center></h3>\n",
+    "<p>Where $\\alpha$ is some constant and $v$ is average linear velocity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -353,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
